--- a/Karangos/src/App.css
+++ b/Karangos/src/App.css
@@ -8,3 +8,18 @@
 .MuiDataGrid-row:hover button {
   visibility: visible;
 }
+
+.form-fields form {
+  margin: 0 auto;
+  max-width: 95%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.form-fields .MuiFormControl-root {
+  min-width: 250px;
+  max-width: 500px;
+  width: 500px;
+  margin-bottom: 36px;
+}
